Prevents the toolbar from overflowing the viewport on narrow screens

--- a/web/style/transmission/mobile.scss
+++ b/web/style/transmission/mobile.scss
@@ -117,7 +117,6 @@ $toolbar-height: 39px;
 
 div#toolbar
 {
-	width: 100%;
 	height: $toolbar-height;
 	margin: 0px;
 	padding: 2px;
